Complete button styling

--- a/style.css
+++ b/style.css
@@ -1,26 +1,23 @@
 @import url('https://fonts.googleapis.com/css2?family=Fredoka+One&family=Rampart+One&display=swap');
 
-html,
+html {
+    height: 100%;
+}
+
+
+
 body {
     min-height: 100%;
-}
-
-.flex {
-    display: flex;
-    align-items: center;
-}
-
-body {
-    flex-direction: column;
     margin: 0;
+    flex-direction: column;
     background-color: #fafafa;
 }
 
 h1 {
     font-family: 'Rampart One', cursive;
-    font-size: 3.5em;
+    font-size: 3.75em;
     letter-spacing: 10px;
-    color: #404040;
+    color: #535353;
     margin-bottom: 20px;
 }
 
@@ -30,6 +27,11 @@ p {
     font-size: 20px;
     color: #4d4d4d;
     margin: 10px;
+    letter-spacing: 1px;
+}
+
+button:hover {
+    opacity: 0.8;
 }
 
 div.buttons button {
@@ -37,13 +39,18 @@ div.buttons button {
     height: 50px;
     font-size: 25px;
     font-family: 'Fredoka One', cursive;
-    background-color: #fff;
+    background-color: #fdfdfd;
     border: 1px solid #b3b3b3;
     border-radius: 30px;
 }
 
 div.buttons button:hover {
     cursor: pointer;
+}
+
+.flex {
+    display: flex;
+    align-items: center;
 }
 
 .buttons {
@@ -57,7 +64,7 @@ div.buttons button:hover {
 
 .menu {
     justify-content: center;
-    gap: 2em;
+    gap: 5em;
     margin-bottom: 2em;
 }
 
@@ -101,5 +108,17 @@ div.buttons button:hover {
 #reset {
     font-family: Verdana, Geneva, Tahoma, sans-serif;
     font-size: 20px;
-    margin: 20px;
+    margin: 25px;
+    color: #535353;
+    border: 1px solid #b3b3b3;
+    background-color: #fdfdfd;
+    border-radius: 15px;
+    height: 45px;
+    width: 110px;
+    font-family: 'Fredoka One', cursive;
+    letter-spacing: 2px;
+}
+
+#reset:hover {
+    cursor: pointer;
 }
