--- a/style.css
+++ b/style.css
@@ -30,6 +30,18 @@ h2 {
     text-align: center;
 }
 
+a {
+    color: #3d3e3c;
+    font-family: 'Open Sans', sans-serif;
+    font-size: 20px;
+    margin: 0.5em 0;
+    text-decoration: none;
+}
+
+a:hover {
+    opacity: 0.8;
+}
+
 button:hover {
     opacity: 0.9;
 }
